[fix] word wrap in footer

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -199,6 +199,7 @@ html[dir="rtl"] .ft-social .ft-social-list:dir(rtl) ul li.ft-main-item:not(:last
 .ft-main .ft-main-item a:not(.button) {
   display: inline-block;
   font-size: 16px;
+  white-space: break-spaces;
   line-height: 22px;
   padding-left: 0;
 }
